docs: README up with step 5